[gd_scene load_steps=2 format=2]

[ext_resource path="res://Minigames/Strength Test/Strength_Test_Game.gd" type="Script" id=1]

[node name="Strength_Test_Game" type="Node2D"]
scale = Vector2( 0.99071, 1 )
script = ExtResource( 1 )

[node name="Strength_Button" type="Button" parent="."]
margin_left = 620.0
margin_top = 470.0
margin_right = 734.0
margin_bottom = 490.0
rect_scale = Vector2( 5, 5 )

[node name="Exit" type="Button" parent="."]
pause_mode = 2
margin_left = 1750.0
margin_top = 980.0
margin_right = 1790.0
margin_bottom = 1000.0
rect_scale = Vector2( 4, 4 )
text = "Quit"

[node name="Start_Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 4.0
one_shot = true
autostart = true

[node name="Game_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Decrease_Strength" type="Timer" parent="."]
wait_time = 0.35

[node name="Win_Label" type="Label" parent="."]
visible = false
margin_left = 306.916
margin_top = 329.307
margin_right = 370.916
margin_bottom = 343.307
rect_scale = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 0.669458, -2.01709 )
text = "YOU WIN!"

[node name="Lose_Label" type="Label" parent="."]
visible = false
margin_left = 297.008
margin_top = 364.572
margin_right = 365.008
margin_bottom = 378.572
rect_scale = Vector2( 20, 20 )
text = "YOU LOSE!"

[node name="GO" type="Label" parent="."]
visible = false
margin_left = 670.607
margin_top = 43.0615
margin_right = 710.607
margin_bottom = 57.0615
rect_scale = Vector2( 20, 20 )
text = "Go!"
[connection signal="button_down" from="Strength_Button" to="." method="_on_Strength_Button_button_down"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="timeout" from="Game_Timer" to="." method="_on_Game_Timer_timeout"]
[connection signal="timeout" from="Decrease_Strength" to="." method="_on_Decrease_Strength_timeout"]
